# shapenet-db

./: .dockerignore  .gitignore  Dockerfile  README.md  api_server.py  api_test.py  coverage_test.py  debug_search.py  demo_embedding_index.json  demo_similarity_results.json  download_model.sh  examples.py  final_demo.py  hf_shapenet_zips  main.py  npy_to_ply.py  pyproject.toml  quick_test.py  requirements.txt  retrieve_obj.py  shapenet  shapenet_utils.py  shapenet_vectordb.py  test_text_search.py  text_search.py  text_search_examples.py
demo_text_results/: all_queries.json  query_1_wooden_chair.json  query_2_round_dining_table.json  query_3_red_car.json
retrieved/5b43111740009e719159f4cd32e8e02d/models/: model_normalized.json  model_normalized.solid.binvox  model_normalized.surface.binvox
retrieved/96af52c34e42b546cd2c9316e943c316/models/: model_normalized.json  model_normalized.mtl  model_normalized.solid.binvox  model_normalized.surface.binvox
retrieved/b718fe66075a7c952af70677c0b21b90/models/: model_normalized.json  model_normalized.mtl  model_normalized.solid.binvox  model_normalized.surface.binvox
shapenet_models/b089abdb33c39321afd477f714c68df9/models/: model_normalized.json  model_normalized.mtl  model_normalized.solid.binvox  model_normalized.surface.binvox
utils/: obj2glb.py  test.py
