[project]
name = "shapenetdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bpy==4.2",
    "datasets>=4.0.0",
    "huggingface-hub[cli]>=0.34.3",
    "ipython>=9.4.0",
    "open-clip-torch>=3.0.0",
    "open3d>=0.19.0",
    "plyfile>=1.1.2",
    "vectordb>=0.0.21",
]
